GNOME Bugzilla – Bug 749440
power: Fix a crash when reading invalid backlight values
Last modified: 2015-05-19 14:17:09 UTC
If atoi() returns a negative value this will be interpreted as an error but the GError wouldn't be set which would crash us when printing an error message. See https://bugzilla.redhat.com/show_bug.cgi?id=1222007
Created attachment 303434 [details] [review] power: Fix a crash when reading invalid backlight values
Review of attachment 303434 [details] [review]: Sure.
173380f..92c470a gnome-3-16 -> gnome-3-16 d80738c..631cd5f master -> master Attachment 303434 [details] pushed as 631cd5f - power: Fix a crash when reading invalid backlight values