power: Fix a crash when reading invalid backlight values

If atoi() returns a negative value this will be interpreted as an
error but the GError wouldn't be set which would crash us when
printing an error message.

See https://bugzilla.redhat.com/show_bug.cgi?id=1222007

https://bugzilla.gnome.org/show_bug.cgi?id=749440